Optimized code, fixed small issues
-Made openLinkInBrowser(String) point to openLinkInBrowser(URL) in Browser.java (instead of duplicating code)
-Made openLinkInBrowser error output more specific
-Made program assume you want to check Showclix if PAX website is disabled, and vice cersa, in CLI
-Added "test" option to CLI mode -- opens Google in browser (should throw error)
-Moved version checking to after CLI mode is enabled
--Prevents headless exception from being thrown
--Allows program to load version notes in background if update is disabled
-Added update token "INVALIDUPDATE" -- only used if end of patch notes is reached
--Means the current version was not found, does not update program
-Changed version to 1.7.4.6