@@ -1,6 +1,7 @@
 package paxchecker;
 
 import java.awt.Desktop;
+import java.io.IOException;
 import java.net.*;
 
 /**
@@ -41,19 +42,10 @@ public class Browser {
    * @param link The link to open in the computer's default browser
    */
   public static void openLinkInBrowser(String link) {
-    Desktop desktop = Desktop.isDesktopSupported() ? Desktop.getDesktop() : null;
-    if (desktop != null && desktop.isSupported(Desktop.Action.BROWSE)) {
-      if (link.startsWith("/") || link.startsWith("\\")) {
-        link = Paxsite.getWebsiteLink(getExpo()) + link;
-      }
-      try {
-        desktop.browse(new URI(link));
-      } catch (Exception e) {
-        ErrorHandler.showErrorWindow("ERROR opening browser window", "Unable to open link in browser window!", e);
-      }
-    } else {
-      System.out.println("Unable to open link in default browser.");
-      ErrorHandler.showErrorWindow("ERROR", "Unable to open link in default browser.", null);
+    try {
+      openLinkInBrowser(new URL(link));
+    } catch (MalformedURLException mue) {
+      mue.printStackTrace();
     }
   }
 
@@ -64,16 +56,19 @@ public class Browser {
    * @param url The URL to open in the computer's default browser
    */
   public static void openLinkInBrowser(URL url) {
+    if (url == null) {
+      ErrorHandler.showErrorWindow("ERROR", "Unable to open link in default browser -- link is null!", null);
+      return;
+    }
     Desktop desktop = Desktop.isDesktopSupported() ? Desktop.getDesktop() : null;
     if (desktop != null && desktop.isSupported(Desktop.Action.BROWSE)) {
       try {
         desktop.browse(url.toURI());
-      } catch (Exception e) {
+      } catch (URISyntaxException | IOException e) {
         ErrorHandler.showErrorWindow("ERROR opening browser window", "Unable to open link in browser window!", e);
       }
     } else {
-      System.out.println("Unable to open link in default browser.");
-      ErrorHandler.showErrorWindow("ERROR", "Unable to open link in default browser.", null);
+      ErrorHandler.showErrorWindow("ERROR", "Unable to open link in default browser -- desktop is not supported", null);
     }
   }
 }
